CHANGES IN VERSION 1.37.3
-------------------------

UTILITIES

    o `seqGDS2VCF()` does not output the FORMAT column if there is no selected
      sample (e.g., site-only VCF files)


CHANGES IN VERSION 1.37.2
-------------------------

UTILITIES

    o new option 'ext_nbyte' in seqGet2bGeno()

    o `seqAlleleCount()` and `seqGetAF_AC_Missing()` return NA instead of zero
      when all genotypes are missing at a site

NEW FEATURES

    o `seqGDS2BED()`` can convert to PLINK BED files with the best-guess
      genotypes when there are only numeric dosages in the GDS file


CHANGES IN VERSION 1.36.2
-------------------------

BUG FIXES

    o fix the bug at multi-allelic sites with more than 15 different alleles,
      see https://github.com/zhengxwen/SeqArray/issues/78


CHANGES IN VERSION 1.36.1
-------------------------

BUG FIXES

    o `seqExport()` failed when there is no variant

    o `seqSetFilter(, ret.idx=TRUE)`, see
      https://github.com/zhengxwen/SeqArray/issues/80


CHANGES IN VERSION 1.36.0
-------------------------

NEW FEATURES

    o new functions `seqUnitCreate()`, `seqUnitSubset()` and `seqUnitMerge()`

    o new functions `seqFilterPush()` and `seqFilterPop()`

    o new functions `seqGet2bGeno()` and `seqGetAF_AC_Missing()`

    o new function `seqGetData(, "$dosage_sp")` for a sparse matrix of dosages

    o the first argument 'gdsfile' can be a file name in `seqAlleleFreq()`,
      `seqAlleleCount()`, `seqMissing()`

    o new function `seqMulticoreSetup()` for setting a multicore cluster
      according to a numeric value assigned to the argument 'parallel'

UTILITIES

    o allow opening a duplicated GDS file ('allow.duplicate=TRUE') when the
      input is a file name instead of a GDS object in `seqGDS2VCF()`,
      `seqGDS2SNP()`, `seqGDS2BED()`, `seqVCF2GDS()`, `seqSummary()`,
      `seqCheck()` and `seqMerge()`

    o remove the deprecated '.progress' in `seqMissing()`, `seqAlleleCount()`
      and `seqAlleleFreq()`
